--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ exceptiongroup==1.2.2
 Flask==2.0.1
 frozenlist==1.5.0
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
@@ -29,6 +30,7 @@ MarkupSafe==3.0.2
 multidict==6.1.0
 ngrok==1.4.0
 openai==1.55.2
+packaging==24.2
 propcache==0.2.0
 pycparser==2.22
 pydantic==2.9.2
