--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ node_modules/
 # Игнорировать файл с настройками IDE
 .vscode/
 
+# Игнорировать виртуальное окружение Python
 venv/
 
-.pyc
+# Игнорировать скомпилированные Python-файлы
+*.pyc
+
+# Игнорировать папку __pycache__
+__pycache__/
